[workspace]
members = [
    "rust",
    "modules",
    "stealth",
    "cli",
    "raw_scanner"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
once_cell = "1.19"
anyhow = "1.0"
crossbeam = "0.8"
pnet = "0.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
