[package]
name = "blackmap"
version = "4.0.0"
edition = "2021"
authors = ["BlackMap Contributors"]
license = "MIT"
description = "Fast, stealthy network reconnaissance framework"

[[bin]]
name = "blackmap"
path = "src/bin/main.rs"

[lib]
name = "blackmap"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Pattern matching
regex = "1.10"

# Networking
socket2 = "0.5"
nix = { version = "0.27", features = ["net"] }

# Low-level utilities
byteorder = "1.5"
bytes = "1.5"

# Async utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"

# IP handling
ipnetwork = "0.20"

# DNS resolution
trust-dns-resolver = "0.23"
trust-dns-proto = "0.23"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"
rand_chacha = "0.3"

# Lazy initialization
lazy_static = "1.4"
once_cell = "1.19"

# Plugin system (dynamic loading)
libloading = "0.8"

# FFI to C components
libc = "0.2"

# Performance
ahash = "0.8"
rustc-hash = "1.1"

# Testing
proptest = "1.4"
[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
