[package]
name = "blackmap"
version = "6.0.0"
edition = "2021"
authors = ["BlackMap Contributors"]
license = "MIT"
description = "Fast, stealthy network reconnaissance framework"

[lib]
name = "blackmap"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
modules = { path = "../modules" }
stealth = { path = "../stealth" }
raw_scanner = { path = "../raw_scanner" }

# Async runtime
tokio = { workspace = true }

# CLI parsing
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

# Pattern matching
regex = { workspace = true }

# Networking
socket2 = "0.5"
nix = { version = "0.27", features = ["net"] }

# Low-level utilities
byteorder = "1.5"
bytes = "1.5"

# Async utilities
futures = "0.3"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = "0.4"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Concurrency
parking_lot = "0.12"
crossbeam = { workspace = true }
dashmap = "5.5"

# IP handling
ipnetwork = "0.20"

# DNS resolution
trust-dns-resolver = "0.23"
trust-dns-proto = "0.23"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"
rand_chacha = "0.3"

# Lazy initialization
lazy_static = "1.4"
once_cell = { workspace = true }

# Plugin system (dynamic loading)
libloading = "0.8"

# FFI to C components
libc = "0.2"

# Performance
ahash = "0.8"
rustc-hash = "1.1"

# Testing
proptest = "1.4"
pnet.workspace = true

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"
